# LinuxDev

03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile  fun.c  prog  prog-a  prog-so  prog.c
05_Environmental/: CMakeLists.txt  pcreshow.c  regex_verification.c
06_Debugging/: double_free.c
07_DebuggingTracing/: Makefile  README.md  rm_wrapper.c
08_TestingCoverage/: Makefile.am  README.md  configure.ac
08_TestingCoverage/src/: Makefile.am
08_TestingCoverage/tests/: Makefile.am  test.ts
